Fix text covering on card component

--- a/Client/client/src/App.css
+++ b/Client/client/src/App.css
@@ -57,6 +57,7 @@ body::-webkit-scrollbar {
   align-content: space-around;
   justify-items: center;
   justify-content: center;
+  align-items:stretch;
 }
 
  
